include/assemblydb.h

typedef struct adb_t adb_t;
/* Error codes */
#define ADB_OK              0
#define ADB_ERR_NOT_FOUND   1
#define ADB_ERR_IO          2
#define ADB_ERR_CORRUPT     3
#define ADB_ERR_KEY_TOO_LONG 4
#define ADB_ERR_VAL_TOO_LONG 5
#define ADB_ERR_LOCKED      6
#define ADB_ERR_NOMEM       7
#define ADB_ERR_INVALID     8
#define ADB_ERR_TX_CONFLICT 9
#define ADB_ERR_TX_NOT_FOUND 10
#define ADB_ERR_TX_ABORTED  11
#define ADB_ERR_FULL        12
#define ADB_ERR_EXISTS      13
#define ADB_ERR_DECRYPT     14
#define ADB_ERR_COMPRESS    15
/* WAL sync modes */
#define ADB_WAL_ASYNC       0
#define ADB_WAL_SYNC        1
#define ADB_WAL_FULL        2
/* Isolation levels */
#define ADB_ISO_READ_UNCOMMITTED 0
#define ADB_ISO_READ_COMMITTED   1
#define ADB_ISO_REPEATABLE_READ  2
#define ADB_ISO_SNAPSHOT         3
#define ADB_ISO_SERIALIZABLE     4
/* Backup types */
#define ADB_BACKUP_FULL     0
#define ADB_BACKUP_INCREMENTAL 1
/* Configuration */
typedef struct {
    uint32_t cache_size_pages;
    uint8_t  encryption_enabled;
    uint8_t  compression_enabled;
    uint8_t  wal_sync_mode;
    uint8_t  _pad;
    uint32_t memtable_max_bytes;
} adb_config_t;
/* Metrics */
typedef struct {
    uint64_t puts_total;
    uint64_t gets_total;
    uint64_t deletes_total;
    uint64_t scans_total;
    uint64_t cache_hits;
    uint64_t cache_misses;
    uint64_t bloom_true_positives;
    uint64_t bloom_false_positives;
    uint64_t bytes_written;
    uint64_t bytes_read;
    uint64_t compactions_run;
    uint64_t compaction_bytes;
    uint64_t wal_syncs;
    uint64_t wal_bytes;
    uint64_t tx_commits;
    uint64_t tx_rollbacks;
    uint64_t page_splits;
    uint64_t page_merges;
    uint64_t memtable_flushes;
    uint64_t sstable_count;
} adb_metrics_t;
/* Batch entry */
typedef struct {
    const void *key;
    uint16_t    key_len;
    const void *val;
    uint16_t    val_len;
} adb_batch_entry_t;
/* Scan callback: return 0 to continue, non-zero to stop */
typedef int (*adb_scan_fn)(const void *key, uint16_t key_len,
                           const void *val, uint16_t val_len,
                           void *user_data);
/* Index key extractor: extract secondary key from primary value */
typedef int (*adb_index_fn)(const void *val, uint16_t val_len,
                            void *index_key_buf, uint16_t *index_key_len);
/* ============================================================
 * Backup & Recovery
 * ============================================================ */
int adb_backup(adb_t *db, const char *dest_path, uint8_t backup_type);
int adb_restore(const char *backup_path, const char *dest_path);
/* ============================================================
 * Metrics & Monitoring
 * ============================================================ */
int adb_get_metrics(adb_t *db, adb_metrics_t *metrics_out);