flutter/lib/src/bindings/assemblydb_bindings.g.dart


  int adb_backup(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<ffi.Char> dest_path,
    int backup_type,
  ) {
    return _adb_backup(
      db,
      dest_path,
      backup_type,
    );
  }

  late final _adb_backupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Char>,
              ffi.Uint8)>>('adb_backup');
  late final _adb_backup = _adb_backupPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, ffi.Pointer<ffi.Char>, int)>();

  int adb_restore(
    ffi.Pointer<ffi.Char> backup_path,
    ffi.Pointer<ffi.Char> dest_path,
  ) {
    return _adb_restore(
      backup_path,
      dest_path,
    );
  }

  late final _adb_restorePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('adb_restore');
  late final _adb_restore = _adb_restorePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int adb_get_metrics(
    ffi.Pointer<adb_t> db,
    ffi.Pointer<adb_metrics_t> metrics_out,
  ) {
    return _adb_get_metrics(
      db,
      metrics_out,
    );
  }

  late final _adb_get_metricsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<adb_t>,
              ffi.Pointer<adb_metrics_t>)>>('adb_get_metrics');
  late final _adb_get_metrics = _adb_get_metricsPtr.asFunction<
      int Function(ffi.Pointer<adb_t>, ffi.Pointer<adb_metrics_t>)>();
}

final class adb_t extends ffi.Opaque {}

final class adb_config_t extends ffi.Struct {
  @ffi.Uint32()
  external int cache_size_pages;

  @ffi.Uint8()
  external int encryption_enabled;

  @ffi.Uint8()
  external int compression_enabled;

  @ffi.Uint8()
  external int wal_sync_mode;

  @ffi.Uint8()
  external int _pad;

  @ffi.Uint32()
  external int memtable_max_bytes;
}

final class adb_metrics_t extends ffi.Struct {
  @ffi.Uint64()
  external int puts_total;

  @ffi.Uint64()
  external int gets_total;

  @ffi.Uint64()
  external int deletes_total;

  @ffi.Uint64()
  external int scans_total;

  @ffi.Uint64()
  external int cache_hits;

  @ffi.Uint64()
  external int cache_misses;

  @ffi.Uint64()
  external int bloom_true_positives;

  @ffi.Uint64()
  external int bloom_false_positives;

  @ffi.Uint64()
  external int bytes_written;

  @ffi.Uint64()
  external int bytes_read;

  @ffi.Uint64()
  external int compactions_run;

  @ffi.Uint64()
  external int compaction_bytes;

  @ffi.Uint64()
  external int wal_syncs;

  @ffi.Uint64()
  external int wal_bytes;

  @ffi.Uint64()
  external int tx_commits;

  @ffi.Uint64()
  external int tx_rollbacks;

  @ffi.Uint64()
  external int page_splits;

  @ffi.Uint64()
  external int page_merges;

  @ffi.Uint64()
  external int memtable_flushes;

  @ffi.Uint64()
  external int sstable_count;

  @ffi.Array.multi([12])
  external ffi.Array<ffi.Uint64> _reserved;
}

final class adb_batch_entry_t extends ffi.Struct {
  external ffi.Pointer<ffi.Void> key;

  @ffi.Uint16()
  external int key_len;

  external ffi.Pointer<ffi.Void> val;

  @ffi.Uint16()
  external int val_len;
}

typedef adb_scan_fn = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Int Function(
            ffi.Pointer<ffi.Void> key,
            ffi.Uint16 key_len,
            ffi.Pointer<ffi.Void> val,
            ffi.Uint16 val_len,
            ffi.Pointer<ffi.Void> user_data)>>;
typedef adb_index_fn = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Int Function(
            ffi.Pointer<ffi.Void> val,
            ffi.Uint16 val_len,
            ffi.Pointer<ffi.Void> index_key_buf,
            ffi.Pointer<ffi.Uint16> index_key_len)>>;

const int ADB_OK = 0;

const int ADB_ERR_NOT_FOUND = 1;

const int ADB_ERR_IO = 2;

const int ADB_ERR_CORRUPT = 3;

const int ADB_ERR_KEY_TOO_LONG = 4;

const int ADB_ERR_VAL_TOO_LONG = 5;

const int ADB_ERR_LOCKED = 6;

const int ADB_ERR_NOMEM = 7;

const int ADB_ERR_INVALID = 8;

const int ADB_ERR_TX_CONFLICT = 9;

const int ADB_ERR_TX_NOT_FOUND = 10;

const int ADB_ERR_TX_ABORTED = 11;

const int ADB_ERR_FULL = 12;

const int ADB_ERR_EXISTS = 13;

const int ADB_ERR_DECRYPT = 14;

const int ADB_ERR_COMPRESS = 15;

const int ADB_WAL_ASYNC = 0;

const int ADB_WAL_SYNC = 1;

const int ADB_WAL_FULL = 2;

const int ADB_ISO_READ_UNCOMMITTED = 0;

const int ADB_ISO_READ_COMMITTED = 1;

const int ADB_ISO_REPEATABLE_READ = 2;

const int ADB_ISO_SNAPSHOT = 3;

const int ADB_ISO_SERIALIZABLE = 4;

const int ADB_BACKUP_FULL = 0;

const int ADB_BACKUP_INCREMENTAL = 1;
